Fix overlapping footer
This fix #716.

--- a/themes/barba/layout/components/chrome/_footer.scss
+++ b/themes/barba/layout/components/chrome/_footer.scss
@@ -11,6 +11,10 @@
   pointer-events: none;
 
   @include mq(l) {
-    padding: 5rem;
+    padding: 4.5rem;
+  }
+
+  [data-barba="container"]:not([data-barba-namespace="docs"]) & {
+    display: none;
   }
 }
